--- a/red-badge-demo-ts/package.json
+++ b/red-badge-demo-ts/package.json
@@ -14,6 +14,7 @@
     "papaparse": "^5.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "typescript": "^4.2.3",
